--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ html {
   letter-spacing: 2px;
   font-size: 1.5px;
   margin: 10px 0 2px;
-  color: #D05353 !important;
+  color: purple !important;
   }
   
   .navbar-brand {
@@ -55,7 +55,7 @@ html {
     padding: .25rem .75rem;
     font-size: 1.25rem;
     line-height: 1;
-    border: 2px solid #D05353 !important;
+    border: 2px solid purple !important;
     border-radius: .25rem;
 } 
 
@@ -113,7 +113,7 @@ html {
 
   .section-heading-red {
     line-height: 1rem;
-    color:#D05353;
+    color:purple;
 }
 
 .section-heading-white {
@@ -393,7 +393,7 @@ html {
   
   /*-----------------------alert */
   .alert {
-  background-color: #D05353;
+  background-color: purple;
   }
   
   .alert-heading {
