updating index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,7 +156,7 @@ html {
 /*-----------------------dividers */
       .divider-section-pink {
       width: 20%;               
-      background: #D05353;
+      background: purple;
       height: 1px;
       }
       
